<resources>
    <string name="app_name">Sloa</string>
    <string name="facebook_app_id">222693686305207</string>
    <string name="fb_login_protocol_scheme">fb222693686305207</string>

    <!-- Sign In and Sign up -->
    <!-- 로그인/회원가입 과정 좌상단 타이틀 -->
    <string name="signin">로그인</string>
    <string name="signup">회원가입</string>
    <string name="identity_verification">본인인증</string>
    <string name="signin_insert_profile">프로필 설정</string>

    <string name="re_request">재전송</string>
    <string name="identity_verification_number">인증번호</string>
    <string name="identity_verification_number_request">인증요청</string>
    <string name="default_phone_number">01012345678</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="next">다음</string>
    <string name="email">이메일 주소 입력</string>
    <string name="email_identification_number">이메일 인증 번호 입력</string>
    <string name="password">비밀번호 입력</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="password_reset">비밀번호 재설정</string>
    <string name="email_signup_button">회원가입</string>
    <string name="email_pw_search_button">비밀번호 찾기</string>


    <string name="signin_email_start">시작하기</string>
    <string name="signin_email">이메일로 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">님이</string>
    <string name="alarm_comment">님이 메세지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신의 계정을 팔로워하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">보내기</string>

    <!-- Add Photo -->
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>

